--- a/servefood/public/index.html
+++ b/servefood/public/index.html
@@ -15,6 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -25,6 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-dark.min.css" rel="stylesheet">
+    <link href="//db.onlinewebfonts.com/c/c891e94039740e4a24a9f53324fd91be?family=NHaasGroteskDSPro-65Md" rel="stylesheet" type="text/css"/>
     <title>React App</title>
   </head>
   <body>
